# repo-reporter

./: .env.example  .gitignore  GITHUB_ACTION_SETUP.md  PROMPT_CUSTOMIZATION.md  README.md  local_context.example.txt  main.py  pyproject.toml  repos.example.txt  run_example.sh  test_repo.txt  test_repos.txt
.github/workflows/: monthly-reports.yml
code_reporter/: __init__.py  cli.py  config.py  dependency_analyzer.py  github_analyzer.py  language_detector.py  llm_analyzer.py  logger.py  readme_parser.py  repo_manager.py  report_generator.py  scc_analyzer.py  sentry_analyzer.py
code_reporter/templates/: _executive_content.html  _project_content.html  base.html  combined_report.html  executive_summary.html  executive_summary_prompt.txt  llm_prompt.txt  project_report.html  project_summary_prompt.txt
reports/: executive_summary.html  flask_report.html  gin_report.html  laravel_report.html
tools/: list_direct_php_deps.py  osv_debug.py
