[project]
name = "code-reporter-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "requests>=2.25.0",
    "gitpython>=3.1.0",
    "weasyprint>=60.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "tomli>=2.0.0",
    "pyyaml>=6.0",
    "markdown>=3.4.0",
    "sentry-sdk>=1.40.0",
]

[project.scripts]
code-reporter = "code_reporter.cli:main"
